<resources>
    <string name="app_name">Github Users</string>

    <string name="refresh">Refresh</string>

    <string name="title_error">Oops! Something went wrong.</string>

    <string name="message_error">Please refresh the page and try again.</string>
    <string name="message_please_check_your_internet">Please check your internet connection</string>
    <string name="message_something_went_wrong">Something went wrong, Please try again later</string>
    <string name="message_request_timed_out">Request timed out, please try again later.</string>
    <string name="message_unknown_error">Something went wrong</string>

    <string name="bottom_users">Users</string>
    <string name="bottom_search_user">Search User</string>

    <string name="search_hint">Search</string>
    <string name="visit_profile">Visit Profile</string>
    <string name="bio">Bio</string>

    <string name="user_details">User Details</string>

    <string name="image_translation">image_translation</string>
</resources>