<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onRefresh"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_medium">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vector"
            app:layout_constraintBottom_toTopOf="@id/layout_refresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_error">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.AppTheme.HeadLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_error"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_message"
                style="@style/TextAppearance.AppTheme.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/message_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_refresh"
                style="@style/TextAppearance.AppTheme.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:onClick="@{onRefresh}"
                android:text="@string/refresh"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="@id/tv_message"
                app:layout_constraintStart_toStartOf="@id/tv_message"
                app:layout_constraintTop_toBottomOf="@id/tv_message" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>