<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ahmadkadddour.githubuser.presentation.ui.details.UserDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/user_details}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:visibility="@{!viewModel.isError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:padding="@dimen/margin_medium">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_user"
                    style="@style/CircularImage"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:src="@{viewModel.userLiveData.imageUrl}"
                    android:transitionName="@string/image_translation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeHolder="@{@color/on_background}"
                    tools:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/tv_full_name"
                    style="@style/TextAppearance.AppTheme.HeadLine2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@{viewModel.userLiveData.username}"
                    app:existence="@{viewModel.userLiveData.username != null}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_user"
                    tools:text="The Octocat" />

                <TextView
                    android:id="@+id/tv_username"
                    style="@style/TextAppearance.AppTheme.Headline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:text="@{viewModel.userLiveData.githubHandle}"
                    android:textColor="@color/gray"
                    app:existence="@{viewModel.userLiveData.githubHandle != null}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_full_name"
                    tools:text="octocat" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_visit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:icon="@dimen/margin_xsmall"
                    android:paddingHorizontal="@dimen/margin_small"
                    android:text="@string/visit_profile"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp"
                    app:existence="@{viewModel.userLiveData.githubUrl != null}"
                    app:icon="@drawable/ic_arrow_right"
                    app:iconGravity="textStart"
                    app:iconPadding="@dimen/margin_small"
                    app:iconTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_username" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layout_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:orientation="vertical"
                    app:existence="@{viewModel.userLiveData.bio != null}"
                    app:layout_constraintTop_toBottomOf="@id/button_visit_profile">

                    <TextView
                        android:id="@+id/tv_label_bio"
                        style="@style/TextAppearance.AppTheme.HeadLine2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_send_money" />

                    <TextView
                        android:id="@+id/tv_bio"
                        style="@style/TextAppearance.AppTheme.Body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xsmall"
                        android:text="@{viewModel.userLiveData.bio}"
                        tools:text="There once was..." />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout_bio">

                    <TextView
                        android:id="@+id/tv_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/margin_small"
                        android:text="@{viewModel.userLiveData.blogUrl}"
                        app:drawableStartCompat="@drawable/ic_website"
                        app:existence="@{viewModel.userLiveData.blogUrl != null}"
                        tools:text="https://github.com/octocat" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:drawablePadding="@dimen/margin_small"
                        android:text="@{viewModel.userLiveData.email}"
                        app:drawableStartCompat="@drawable/ic_email"
                        app:existence="@{viewModel.userLiveData.email != null}"
                        tools:text="ahmad.kadour222@gmail.com" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:drawablePadding="@dimen/margin_small"
                        android:text="@{viewModel.userLiveData.address}"
                        app:drawableStartCompat="@drawable/ic_address"
                        app:existence="@{viewModel.userLiveData.address != null}"
                        tools:text="San Francisco" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:existence="@{viewModel.isLoading}" />
        </RelativeLayout>

        <include
            layout="@layout/layout_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:existence="@{viewModel.isError}"
            app:onRefresh="@{() -> viewModel.fetchUser(viewModel.handle)}"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>